# osm-pbf-benchmark

./: .gitignore  Cargo.toml  README.md
src/: benches.rs  impl_osm_pbf_reader.rs  impl_osm_pbf_reader_pb4.rs  impl_osmpbf.rs  impl_osmpbfreader.rs  lib.rs
