[package]
name = "osm-pbf-benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = ["osm-pbf-reader", "osm-pbf-reader-pb4", "osmpbfreader", "osmpbf"]

[dependencies]
criterion = "0.5"
rayon = "1.11"

[dependencies.osm-pbf-reader]
package = "osm-pbf-reader"
git = "https://github.com/HellButcher/osm-pbf.git"
branch = "main"
optional = true

[dependencies.osm-pbf-reader-pb4]
package = "osm-pbf-reader"
#git = "https://github.com/HellButcher/osm-pbf.git"
#branch = "feat/new-protobuf-v4"
path = "../osm-pbf/reader"
optional = true

[dependencies.osmpbfreader]
version = "0.16"
optional = true

[dependencies.osmpbf]
version = "0.3"
optional = true


[[bench]]
path = "src/benches.rs"
name = "osm-pbf-reader"
harness = false
